# Freedom-LS

./: .coverage  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE TODO.md  CLAUDE.md  DOCKER_DEPLOY.md  Dockerfile  README.md  TODO.md  claude.sh  claude_todos.md  conftest.py  cspell.json  db.sqlite3  db_clear.sh  db_recreate.sh  dev_db_delete.sh  dev_db_init.sh  docker-compose.yml  docker-entrypoint.sh  fetch_pr_comments.sh  find_available_port.sh  install_dev.sh  kill_runserver.sh  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  refresh_db.sh  stories.md  tailwind.base_interface.css  tailwind.components.css  tailwind.input.css  tailwind.picture_spotlight.css
.claude/: settings.json
.claude/agents/: code-reviewer.md  qa-data-helper.md
.claude/commands/: address_pr_review.md  catchup.md  commit.md  make_github_issue.md  placeholder_page.md  plan_from_spec.md  pr_react_to_claudes_review.md  tdd_implement.md  todos.md
.claude/docs/: email_templates.md  factory_boy.md  frontend_styling.md  multi_tenant.md  templates_and_cotton.md  testing.md
.claude/ds/: config.md
.claude/fls/: config.md
.claude/hooks/: ruff_fix.sh
.claude/logs/: bash-command-log.txt
.claude/sdd/: config.md
.github/workflows/: notify-downstream.yml  security.yml  tests.yml
SACAA functionality audit/: Phase1.md  Phase2.md  Phase3.md  implementation.md  requirements-matrix.md  sacaa-requirements.md
accounts/: admin.py  models.py  urls.py
accounts/migrations/: 0001_initial.py  0002_remove_user_sites_user_site_id.py
app_authentication/: models.py
app_authentication/migrations/: 0001_add_client_model.py
apps/accounts/: admin.py  allauth_account_adapter.py  context_processors.py  forms.py  models.py
apps/app_authentication/: admin.py  models.py
apps/bloom_student_interface/: admin.py  apps.py  models.py  recommender.py  urls.py  views.py
apps/content_engine/: admin.py  apps.py  markdown_utils.py  models.py  schema.py  validate.py
apps/educator_interface/: apps.py  urls.py  views.py
apps/site_aware_models/: apps.py  context_processors.py  middleware.py
apps/student_interface/: apis.py  models.py  urls.py  utils.py  views.py
apps/student_management/: admin.py  models.py
apps/student_progress/: admin.py  models.py
apps/xapi_learning_record_store/: api.py  apps.py  models.py
claude_plugins/django-stack-claude-plugin/: README.md
claude_plugins/fls-dev-claude-plugin/: README.md
claude_plugins/sdd-claude-plugin/: README.md
concrete_apps/bloom_student_interface/: activity_utils.py  admin.py  apps.py  conftest.py  context_processors.py  models.py  recommender.py  signals.py  urls.py  views.py
config/: settings_base.py  settings_dev.py  settings_prod.py  site_urlconf_middleware.py  sitemaps.py  urls.py  views.py
config/role_based_permissions/: demodev.py  prelude.py
content_engine/: admin.py  markdown_utils.py  models.py  schema.py  urls.py  validate.py  views.py
content_engine/migrations/: 0001_initial.py  0002_remove_contentcollection_file_path_and_more.py  0003_remove_contentcollection_content_type_and_more.py  0004_form_content_topic_content.py  0005_delete_contentcollection.py  0006_rename_site_id_form_site_and_more.py  0007_contentcollection_contentcollectionitem.py  0008_contentcollection_file_path_form_file_path_and_more.py  0009_alter_contentcollection_file_path_and_more.py  0010_formcontent_delete_formtext.py  0011_file.py
content_engine/templatetags/: content_tags.py
content_engine/tests/: test_markdown_utils.py  test_save_with_uuid.py
course_content/: admin.py  models.py
course_content/migrations/: 0001_initial.py
demo_content/: README.md
demo_content/functionality_demo_content_widgets/: 2. media.md  3. structured-content.md  5. cards.md  course.md
demo_content/functionality_demo_course/: 1. something.md  1. topic.md  2. something.md  2. topic.md  course.md  course.yaml
demo_content/functionality_demo_course_parts/: course.md
demo_content/functionality_demo_end_with_quiz/: 2. topic.md  4. topic.md  course.md
demo_content/functionality_demo_end_with_topic/: 1. topic.md  2. topic.md  4. topic.md  5. topic.md  6. topic.md  7. topic.md  8. topic.md  course.md
demo_content/functionality_demo_standard_markdown/: 1. topic.md  2. topic.md  3. topic.md  course.md
dev_db/: README.md  bin_sh.sh  cleanup_devdb.sh  docker-compose.yaml
docs/: Making a seperate project.md  admin_interface.md  app_structure.md  deployment-security-checklist.md  frontend_styling.md  incorperate into another project.md  templates_and_cotton.md
docs/deploy/: Caprover deploy.md  DOCKER_DEPLOY.md
docs/how tos/: Caprover deploy.md  DOCKER_DEPLOY.md  incorperate into another project.md  incorporate into another project.md  template repo manifest.md  theme-fls.md
docs/product/: README.md  admin-interface.md  authentication.md  configuration-and-extension.md  content-editing-workflow.md  deployment.md  educator-interface.md  learner-experience.md  learner-tracking.md  multi-tenancy-and-isolation.md  roadmap.md  security-and-data-handling.md  webhooks.md
fls-claude-plugin/: .lsp.json  .mcp.json  README.md  playwright-mcp-config.json
fls-claude-plugin/.claude-plugin/: plugin.json
fls-claude-plugin/agents/: code-reviewer.md  plan-security-reviewer.md  plan-structure-reviewer.md  plan-testing-reviewer.md  qa-bugfixer.md  qa-data-helper.md  sdd-mechanic.md  sdd-worker.md
fls-claude-plugin/commands/: address_pr_review.md  app_map.md  init.md  rebase_main.md
fls-claude-plugin/hooks/: hooks.json
fls-content-plugin/: README.md
freedom_ls/: conftest.py
legal_docs/: README.md
scripts/: write-active-theme.mjs
stories/: quizes.md
student_interface/: apis.py  apps.py  models.py  urls.py  views.py
student_management/: admin.py  models.py
system_base/: admin.py  apps.py  middleware.py  models.py
templates/: _base.html  _partials.html  header.html
tests/: conftest.py  test_admin_url.py  test_security_patterns.py
xapi_learning_record_store/: README.md  api.py
(+2200 files in other folders)
