[project]
name = "sis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-allauth[headless]>=65.13.0",
    "django-browser-reload>=1.21.0",
    "django-click>=2.4.1",
    "django-cotton>=2.1.3",
    "django-guardian>=3.2.0",
    "django-ninja>=1.4.3",
    "django-unfold>=0.67.0",
    "markdown-headdown>=0.1.3",
    "nh3>=0.3.2",
    "pytest-env>=1.2.0",
    "pytest-playwright>=0.7.2",
    "python-frontmatter>=1.1.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
env = ["DJANGO_ALLOW_ASYNC_UNSAFE = True"]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "django-template-partials>=25.2",
    "ipython>=9.7.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
]
