[project]
name = "freedom_ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7,<6.0",
    "django-allauth[headless]>=65.13.0",
    "django-click>=2.4.1",
    "django-cotton>=2.1.3,<2.5",
    "django-guardian>=3.2.0",
    "django-ninja>=1.4.3",
    "django-unfold>=0.67.0",
    "markdown-headdown>=0.1.3",
    "nh3>=0.3.2",
    "psycopg[binary]>=3.3.0",
    "pytest-env>=1.2.0",
    "pytest-playwright>=0.7.2",
    "python-frontmatter>=1.1.0",
    "django-template-partials>=25.2",
    "djlint>=1.36.4",
    "whitenoise>=6.11.0",
    "django-storages[s3]>=1.14.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["freedom_ls*"]
exclude = ["media*", "config*", "static*", "dev_db*", "gitignore*", "node_modules*", "demo_content*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
env = ["DJANGO_ALLOW_ASYNC_UNSAFE = True"]
testpaths = ["freedom_ls", "tests"]
addopts = "--strict-markers"
markers = [
    "playwright: marks tests that use playwright for browser automation",
]


[tool.djlint]
profile="django"
blank_line_after_tag="load,extends,include,endpartialdef"
close_void_tags=true
custom_blocks="partialdef"
custom_html="c-\\w+"
line_break_after_multiline_tag=true
max_blank_lines=1
ignore="H006"


[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "django-watchfiles>=1.4.0",
    "ipython>=9.7.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "django-browser-reload>=1.21.0",
    "ruff>=0.14.10",
]


