[project]
name = "freedom_ls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<6.1",
    "django-allauth[headless]>=65.14.0",
    "django-click>=2.4.1",
    "django-cotton>=2.1.3",
    "django-guardian>=3.3.0",
    "django-ninja>=1.5.0",
    "django-unfold>=0.83.0",
    "markdown-headdown>=0.1.3",
    "nh3>=0.3.2",
    "psycopg[binary]>=3.3.0",
    "pytest-env>=1.2.0",
    "pytest-playwright>=0.7.2",
    "python-frontmatter>=1.1.0",
    "whitenoise>=6.11.0",
    "django-storages[s3]>=1.14.6",
    "django-premailer>=0.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "django-fernet-encrypted-fields>=0.3.1",
    "django-ace>=1.43.5",
    "argon2-cffi>=25.1.0",
    "django-axes>=8.3.1",
    "cryptography>=46.0.5",
    "pyjwt>=2.12.0",
    "sqlparse>=0.5.4",
    "urllib3>=2.6.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["freedom_ls*"]
exclude = ["media*", "config*", "static*", "dev_db*", "gitignore*", "node_modules*", "demo_content*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
env = ["DJANGO_ALLOW_ASYNC_UNSAFE = True"]
testpaths = ["freedom_ls", "tests"]
addopts = "--strict-markers"
markers = [
    "playwright: marks tests that use playwright for browser automation",
]


[tool.djlint]
profile="django"
blank_line_after_tag="load,extends,include,endpartialdef"
close_void_tags=true
custom_blocks="partialdef"
custom_html="c-\\w+"
line_break_after_multiline_tag=true
max_blank_lines=1
ignore="H006"


[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-watchfiles>=1.4.0",
    "ipython>=9.7.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "django-browser-reload>=1.21.0",
    "ruff>=0.14.10",
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
    "pytest-cov>=7.0.0",
    "django-stubs[compatible-mypy]>=5.2.9",
    "pre-commit>=4.5.1",
    "detect-secrets>=1.5.0",
    "bandit[sarif,toml]>=1.9.4",
    "pip-audit>=2.10.0",
]



[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
extend-exclude = ["migrations", "staticfiles", "media"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort import sorting
    "N",      # pep8-naming
    "DJ",     # flake8-django
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print (no print in production)
    "PT",     # flake8-pytest-style
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by ruff format
    "RUF012", # mutable class attributes — Django model fields by design
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Auto-generated files — allow long lines, import order issues, wildcard imports, uppercase vars, and skip Django rules
"*/migrations/*.py" = ["E501", "E402", "F401", "F403", "N806", "DJ"]
# Settings files — allow late imports, unused imports, and wildcard imports (e.g. from .base import *)
"*/settings.py" = ["E402", "F401", "F403"]
"*/settings/*.py" = ["E402", "F401", "F403"]
# __init__.py — allow re-exports and wildcard imports
"*/__init__.py" = ["F401", "F403"]
# manage.py — allow Django-specific patterns (env default, settings module reference)
"manage.py" = ["DJ001", "DJ008"]
# Tests — allow assert, unusual naming (e.g. camelCase test methods), assert True/False, and hardcoded passwords
"**/tests/**/*.py" = ["S101", "N802", "N806", "B011", "S106"]
# Conftest — allow unused imports (fixtures are imported for side effects)
"conftest.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["freedom_ls"]
known-third-party = []
section-order = [
    "future", "standard-library", "third-party",
    "django", "first-party", "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django", "rest_framework"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "django.utils.translation.gettext_lazy",
    "django.utils.translation.pgettext_lazy",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true



[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true

# set these to true to make it more permissive since the code is newly typed
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false



check_untyped_defs = true


strict_optional = true
no_implicit_optional = true
disallow_untyped_calls = false        # too noisy with Django internals
disallow_untyped_decorators = false   # Django decorators often untyped

# Warnings
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true

# Misc
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
pretty = true

exclude = ["migrations/", "manage\\.py"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "celery.*", "django_filters.*", "debug_toolbar.*",
    "django_extensions.*", "corsheaders.*", "storages.*",
    "boto3.*", "botocore.*", "redis.*", "PIL.*",
    "allauth.*", "djclick.*", "frontmatter.*",
    "markdown.*", "unfold.*", "factory.*", "django_cotton.*",
    "django_ace.*", "encrypted_fields.*", "django.tasks.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.tests.*", "tests.*"]
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "assignment", "arg-type", "misc", "comparison-overlap", "import-untyped"]  # factory-boy is untyped; its metaclass makes mypy think Factory() returns the factory, not the model

[[tool.mypy.overrides]]
module = "freedom_ls.xapi_learning_record_store.*"
ignore_errors = true  # WIP module with broken imports (api_urls imports non-existent 'api')

[tool.django-stubs]
django_settings_module = "config.settings_dev"

[tool.bandit]
exclude_dirs = ["tests", "*/tests/*", "*/migrations/*"]
skips = []
